# Claude

container-monitoring/: .gitignore  Cargo.toml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  compose.yml
container-monitoring/.cargo/: config.toml
container-monitoring/.github/workflows/: ci.yml
container-monitoring/benches/: metrics_benchmark.rs
container-monitoring/config/: config.toml  otel-collector-config.yaml  prometheus.yml
container-monitoring/config/grafana/dashboards/: container-dashboard.json
container-monitoring/config/grafana/provisioning/dashboards/: dashboard.yml
container-monitoring/src/: config.rs  docker.rs  lib.rs  main.rs  metrics.rs  profiling.rs  server.rs  telemetry.rs
container-monitoring/tests/: config_test.rs  metrics_test.rs
mysql-replication/: .editorconfig  .env-example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  compose.override.yml.example  compose.yml  setup-replication.sh
mysql-replication/.scripts/: check-replication.sh  fix-replication.sh  fix-ssl.sh  reset_env.sh  setup-replication.sh  setup-ssl.sh  test-replication.sh
mysql-replication/master/conf/: my.cnf
mysql-replication/master/init/: 01-create-replication-user.sql
mysql-replication/master/ssl/: server-key.pem
mysql-replication/slave1/conf/: my.cnf
mysql-replication/slave1/ssl/: client-key.pem
mysql-replication/slave2/conf/: my.cnf
mysql-replication/slave2/ssl/: client-key.pem
mysql-replication/slave3/conf/: my.cnf
mysql-replication/slave3/ssl/: ca-cert.pem  client-cert.pem
mysql-replication/ssl/: ca-cert.pem  ca-key.pem  client-req.pem  generate-certs.sh  server-cert.pem  server-key.pem  server-req.pem
opentelemetry/: Dockerfile.combined  Makefile  README.md  compose.yml  docker-compose.yml  go.mod  go.sum  prometheus.yml  update_deps.sh
opentelemetry/cmd/client/: main.go
opentelemetry/cmd/server/: main.go
opentelemetry/internal/metrics/: metrics.go
opentelemetry/internal/telemetry/: telemetry.go
opentelemetry/pkg/api/: client.go  middleware.go  server.go
opentelemetry/pkg/config/: config.go
opentelemetry/pkg/telemetry/: metrics.go  provider.go  tracing.go
qdrant/: Makefile  README.md  compose.yml
qdrant/qdrant/qdrant_data/: raft_state.json
qdrant/qdrant/qdrant_data/collections/your-collection/: config.json
qdrant/qdrant/qdrant_data/collections/your-collection/0/: newest_clocks.json  replica_state.json
qdrant/qdrant/qdrant_data/collections/your-collection/0/segments/4436791f-7a4b-47fd-8dc2-6cdc193a1828/: IDENTITY  LOG  MANIFEST-000005  MANIFEST-000009  segment.json
structured-logger/: Cargo.toml  LICENSE  README.md
structured-logger/examples/: async_usage.rs  basic_usage.rs  context.rs  formats.rs  web_service.rs
structured-logger/src/: config.rs  error.rs  formatter.rs  lib.rs  logger.rs
weather-app/src/: index.html  main.js  style.css
weather-app/src-tauri/: .env  Cargo.toml  tauri.conf.json
weather-app/src-tauri/src/: main.rs  weather.rs
(+73 files in other folders)
