[package]
name = "weather-app"
version = "0.1.0"
description = "A Tauri weather application"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["http-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.17.1"
urlencoding = "2.1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
